...
    Row(
        modifier = modifier,
        horizontalArrangement = Arrangement.spacedBy(16.dp),
    ) {
        MainActionButton(
            modifier = Modifier
                .testTag("reload_button")
                .weight(1f),
            text = stringResource(Res.string.main_weather_action_reload),
            onClick = onClickReload,
        )

        MainActionButton(
            modifier = Modifier
                .testTag("next_button")
                .weight(1f),
            text = stringResource(Res.string.main_weather_action_next),
            onClick = onClickNext,
        )
    }
}
...
